--- a/src/components/globals.css
+++ b/src/components/globals.css
@@ -31,6 +31,11 @@ body {
   animation-duration: 20s;
 }
 
+input[type="checkbox"]:checked svg {
+  left: 74px;
+  top: 0;
+}
+
 @keyframes move-forever {
   0% { transform: translate3d(-90px,0,0); }
   100% { transform: translate3d(85px,0,0); }
